# sdkwork-deployments

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  sdkwork.app.config.json  sdkwork.workflow.json
apis/: authority-manifest.json
apis/app-api/deploy/: openapi.yaml
apis/backend-api/deploy/: deploy-backend-api.openapi.json  openapi.yaml
apps/: README.md
configs/: sdkwork-api-cloud-gateway.deployments.development.toml  sdkwork-api-cloud-gateway.deployments.production.toml
configs/topology/: README.md  cloud.split-services.development.env  cloud.split-services.production.env  cloud.unified-process.development.env  cloud.unified-process.production.env  standalone.split-services.development.env  standalone.unified-process.development.env  standalone.unified-process.production.env
crates/: README.md
crates/sdkwork-deploy-api-server/: Cargo.toml  README.md
crates/sdkwork-deploy-api-server/src/: bootstrap.rs  main.rs  readiness.rs
crates/sdkwork-deploy-contract/: Cargo.toml
crates/sdkwork-deploy-contract/src/: app_ports.rs  dto.rs  lib.rs  problem.rs  runtime_env.rs
crates/sdkwork-deploy-core/: Cargo.toml
crates/sdkwork-deploy-core/src/: lib.rs  runtime_env.rs  util.rs
crates/sdkwork-deploy-database-host/: Cargo.toml
crates/sdkwork-deploy-database-host/src/: lib.rs
crates/sdkwork-deployments-standalone-gateway/: Cargo.toml  README.md
crates/sdkwork-deployments-standalone-gateway/src/: main.rs
crates/sdkwork-intelligence-deploy-repository-sqlx/: Cargo.toml
crates/sdkwork-intelligence-deploy-repository-sqlx/src/: audit.rs  certificates.rs  deployments.rs  domains.rs  env_variables.rs  health_checks.rs  lib.rs  nginx_configs.rs  nginx_orchestrator.rs  nginx_security.rs  port.rs  runtime.rs  servers.rs  sites.rs  support.rs
crates/sdkwork-intelligence-deploy-service/: Cargo.toml
crates/sdkwork-intelligence-deploy-service/src/: app.rs  backend.rs  lib.rs  repository.rs
crates/sdkwork-router-deploy-app-api/: Cargo.toml
crates/sdkwork-router-deploy-app-api/src/: auth.rs  http_route_manifest.rs  lib.rs  routes.rs  web_bootstrap.rs
crates/sdkwork-router-deploy-app-api/tests/: app_web_framework_routes.rs
crates/sdkwork-router-deploy-backend-api/: Cargo.toml
crates/sdkwork-router-deploy-backend-api/src/: auth.rs  http_route_manifest.rs  lib.rs  routes.rs  web_bootstrap.rs
crates/sdkwork-router-deploy-common/: Cargo.toml
crates/sdkwork-router-deploy-common/src/: correlation.rs  lib.rs  problem.rs
crates/sdkwork-routes-deploy-app-api/: Cargo.toml
crates/sdkwork-routes-deploy-app-api/src/: auth.rs  routes.rs  web_bootstrap.rs
crates/sdkwork-routes-deploy-app-api/tests/: app_web_framework_routes.rs
crates/sdkwork-routes-deploy-backend-api/: Cargo.toml
crates/sdkwork-routes-deploy-backend-api/src/: auth.rs  routes.rs  web_bootstrap.rs
crates/sdkwork-routes-deploy-common/: Cargo.toml
crates/sdkwork-routes-deploy-common/src/: lib.rs
database/: README.md  database.manifest.json
database/contract/: prefix-registry.json  schema.yaml  table-registry.json
database/ddl/baseline/postgres/: 0001_deploy_legacy_baseline.sql
database/ddl/baseline/sqlite/: 0001_deploy_legacy_baseline.sql
database/seeds/common/: 001_bootstrap.sql
deployments/: README.md
deployments/docker/: Dockerfile  README.md
deployments/kubernetes/: README.md  deployment.yaml  migration-job.yaml  service.yaml
docs/: DESIGN_REPORT.md  INDEX.yaml  README.md  standards-alignment.md
docs/architecture/tech/: TECH-design-report.md  TECH-standards-alignment.md  TECH_ARCHITECTURE.md
docs/product/prd/: PRD-2026-06-14-deploy-web-server-prd.md  PRD.md
docs/superpowers/specs/: 2026-06-14-deploy-web-server-prd.md
migrations/: 001_create_deploy_site.sql  002_create_deploy_domain.sql  003_create_deploy_nginx_config.sql  004_create_deploy_certificate.sql  005_create_deploy_deployment.sql  006_create_deploy_env_variable.sql  007_create_deploy_health_check.sql  008_create_deploy_health_result.sql  009_create_deploy_audit_log.sql
sdks/: README.md
sdks/_route-manifests/app-api/: sdkwork-router-deploy-app-api.route-manifest.json
sdks/_route-manifests/backend-api/: sdkwork-router-deploy-backend-api.route-manifest.json
sdks/sdkwork-deploy-app-sdk/: .sdkwork-assembly.json
sdks/sdkwork-deploy-app-sdk/openapi/: deploy-app-api.openapi.json
sdks/sdkwork-deploy-backend-sdk/: .sdkwork-assembly.json
specs/: README.md  component.spec.json  topology.spec.json
tests/contract/: deploy-orchestrator.contract.test.mjs  deploy-standard.contract.test.mjs
tools/: materialize_deploy_database_contract.mjs  materialize_deploy_phase1_contracts.mjs
