[workspace]
resolver = "2"
members = [
  "crates/sdkwork-deploy-database-host",
  "crates/sdkwork-routes-deploy-common",
  "crates/sdkwork-deploy-contract",
  "crates/sdkwork-deploy-core",
  "crates/sdkwork-intelligence-deploy-service",
  "crates/sdkwork-intelligence-deploy-repository-sqlx",
  "crates/sdkwork-routes-deploy-app-api",
  "crates/sdkwork-routes-deploy-backend-api",
  "crates/sdkwork-deployments-standalone-gateway",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "UNLICENSED"

[workspace.dependencies]
async-trait = "0.1"
axum = "0.8"
dotenvy = "0.15"
http = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "postgres", "any", "migrate"] }
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

sdkwork-deploy-contract = { path = "crates/sdkwork-deploy-contract" }
sdkwork-deploy-core = { path = "crates/sdkwork-deploy-core" }
sdkwork-deploy-database-host = { path = "crates/sdkwork-deploy-database-host" }
sdkwork-intelligence-deploy-service = { path = "crates/sdkwork-intelligence-deploy-service" }
sdkwork-intelligence-deploy-repository-sqlx = { path = "crates/sdkwork-intelligence-deploy-repository-sqlx" }
sdkwork-routes-deploy-app-api = { path = "crates/sdkwork-routes-deploy-app-api" }
sdkwork-routes-deploy-backend-api = { path = "crates/sdkwork-routes-deploy-backend-api" }
sdkwork-routes-deploy-common = { path = "crates/sdkwork-routes-deploy-common" }
sdkwork-deployments-standalone-gateway = { path = "crates/sdkwork-deployments-standalone-gateway" }

sdkwork-iam-web-adapter = { path = "../sdkwork-iam/crates/sdkwork-iam-web-adapter" }
sdkwork-web-core = { path = "../sdkwork-web-framework/crates/sdkwork-web-core" }
sdkwork-web-axum = { path = "../sdkwork-web-framework/crates/sdkwork-web-axum" }
sdkwork-web-bootstrap = { path = "../sdkwork-web-framework/crates/sdkwork-web-bootstrap" }
sdkwork-database-config = { path = "../sdkwork-database/crates/sdkwork-database-config", package = "sdkwork-database-config" }
sdkwork-database-lifecycle = { path = "../sdkwork-database/crates/sdkwork-database-lifecycle", package = "sdkwork-database-lifecycle" }
sdkwork-database-spi = { path = "../sdkwork-database/crates/sdkwork-database-spi", package = "sdkwork-database-spi" }
sdkwork-database-sqlx = { path = "../sdkwork-database/crates/sdkwork-database-sqlx", package = "sdkwork-database-sqlx" }
sdkwork-database-id = { path = "../sdkwork-database/crates/sdkwork-database-id", package = "sdkwork-database-id" }
sdkwork-utils-rust = { path = "../sdkwork-utils/packages/sdkwork-utils-rust" }
