[package]
name = "sdkwork-deploy-api-server"
version.workspace = true
edition.workspace = true

[lib]
name = "sdkwork_deploy_api_server"
path = "src/lib.rs"

[[bin]]
name = "sdkwork-deploy-api-server"
path = "src/main.rs"

[dependencies]
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
sdkwork-routes-deploy-app-api.workspace = true
sdkwork-routes-deploy-backend-api.workspace = true
sdkwork-intelligence-deploy-repository-sqlx.workspace = true
sdkwork-intelligence-deploy-service.workspace = true
sdkwork-deploy-database-host.workspace = true
sdkwork-web-bootstrap.workspace = true

[[bin]]
name = "sdkwork-deployments-standalone-gateway"
path = "src/main.rs"
