[package]
name = "sdkwork-intelligence-deploy-repository-sqlx"
version.workspace = true
edition.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
hex = "0.4"
serde_json.workspace = true
sha2 = "0.10"
sqlx.workspace = true
uuid.workspace = true

sdkwork-database-config.workspace = true
sdkwork-database-sqlx.workspace = true
dotenvy.workspace = true
sdkwork-deploy-contract.workspace = true
sdkwork-deploy-database-host.workspace = true
sdkwork-id-core.workspace = true
sdkwork-intelligence-deploy-service.workspace = true
sdkwork-utils-rust.workspace = true
tracing.workspace = true
